@@ -17,11 +17,11 @@ testOptions in Test ++= Seq(
   Tests.Argument(TestFrameworks.ScalaTest, "-h", "target/test-reports")
 )
 
-scalacOptions := Seq("-unchecked", "-feature", "-deprecation", "-encoding", "utf8")
+scalacOptions := Seq("-unchecked", "-feature", "-deprecation", "-encoding", "utf8", "-target:jvm-1.8")
 scalafmtOnCompile := true
 
 fork in Test := true
-javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:MaxPermSize=2048M", "-XX:+CMSClassUnloadingEnabled")
+javaOptions ++= Seq("-Xms512M", "-Xmx2048M",  "-XX:+CMSClassUnloadingEnabled")
 
 assemblyJarName in assembly := "data_mart_2.11-1.0.jar"
 
